fix: Code snippet causing article body to overflow
https://github.com/riboseinc/metanorma.com/issues/25#issuecomment-427725310
#43

--- a/_sass/open-project-mixins.scss
+++ b/_sass/open-project-mixins.scss
@@ -54,7 +54,6 @@
 }
 
 @mixin code-snippet() {
-  white-space: pre-wrap;
   color: lighten($main-font-color, 24);
 
   @include padded-code-snippet();
@@ -258,6 +257,7 @@
 
     background: white;
     z-index: 1;
+    overflow-x: hidden;
 
     > header {
       > .title {
